[package]
name = "website"
version = "0.1.0"
edition = "2021"

[features]
hydration = [
    "yew/hydration"
]

static = [
    "yew/ssr"
]

[[bin]]
name = "csr"

[[bin]]
name = "ssr"
required-features = [
    "static"
]

[dependencies]
gloo = "0.11.0"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"

[dependencies.yew_icons]
version = "0.8"
features = [
    "BootstrapGithub"
]
