[package]
name = "website"
version = "0.1.0"
edition = "2021"

[features]
hydration = [
    "yew/hydration"
]

static = [
    "yew/ssr"
]

[[bin]]
name = "csr"

[[bin]]
name = "ssr"
required-features = [
    "static"
]

[dependencies]
enum-iterator = "2.0.1"
gloo = "0.11.0"
pulldown-cmark = "0.10.3"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"

[dependencies.yew_icons]
version = "0.8"
features = [
    "BootstrapGithub"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
wasm-logger = { version = "0.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.10" }
tokio = { version = "1.37.0", features = ["full"] }
