[package]
name = "website"
version = "0.5.1"
edition = "2021"

[features]
hydration = ["yew/hydration"]

static = ["yew/ssr"]

[[bin]]
name = "csr"

[[bin]]
name = "ssr"
required-features = ["static"]

[dependencies]
chrono = "0.4.40"
enum-iterator = "2.0.1"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
gloo = "0.11.0"
gloo-net = "0.5.0"
markdown = { path = "../markdown" }
rand = "0.9.0"
ron = "0.8.1"
serde = "1.0.204"
serde_yml = "0.0.11"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3.69"
features = ["CanvasRenderingContext2d", "HtmlCanvasElement"]

[dependencies.yew_icons]
version = "0.8"
features = [
    "BootstrapCheckCircleFill",
    "BootstrapExclamationTriangleFill",
    "BootstrapGithub",
    "BootstrapInfoCircleFill",
    "BootstrapLightbulbFill",
    "BootstrapLinkedin",
    "BootstrapXOctagonFill",
    "LucideMail",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
tokio = { version = "1.37.0", features = ["full"] }
